--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "## Quick setup guide Stuff",
   "main": "./src/client/index.js",
   "scripts": {
-    "start": "webpack serve",
+    "start": "webpack serve --mode development",
     "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,9 +12,9 @@
   "author": "dariatsvetkova <d.s.tsvetkova@hotmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@tailwindcss/forms": "^0.3.3",
     "autoprefixer": "^10.3.1",
     "html-webpack-plugin": "^5.3.2",
+    "postcss": "^8.3.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "tailwindcss": "^2.2.7",
@@ -35,7 +35,6 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "mini-css-extract-plugin": "^2.2.0",
-    "postcss-cli": "^8.3.1",
     "postcss-import": "^14.0.2",
     "postcss-loader": "^6.1.1",
     "style-loader": "^3.2.1"
