--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,8 +22,11 @@
         "max-len": ["error", {
           "ignoreStrings": true,
           "ignoreTemplateLiterals": true,
+          "ignoreComments": true,
           "ignorePattern": "^\\s*<.*>\\s*$"
         }],
+        "react/prop-types": 0,
+        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
         "linebreak-style": [0, "error", "windows"],
         "indent": ["error", 2]
     }
