--- a/package.json
+++ b/package.json
@@ -5,18 +5,26 @@
   "main": "./src/client/index.js",
   "scripts": {
     "start": "webpack serve --mode development",
+    "emulators": "firebase emulators:start --import mock-data --export-on-exit mock-data",
     "build": "webpack --mode production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --exit"
   },
   "keywords": [],
   "author": "dariatsvetkova <d.s.tsvetkova@hotmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@headlessui/react": "^1.4.0",
+    "@heroicons/react": "^1.0.3",
     "autoprefixer": "^10.3.1",
+    "firebase": "^8.9.1",
+    "heroicons": "^1.0.2",
     "html-webpack-plugin": "^5.3.2",
     "postcss": "^8.3.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^3.0.4",
+    "react-helmet": "^6.1.0",
+    "react-router-dom": "^5.2.0",
     "tailwindcss": "^2.2.7",
     "webpack": "^5.50.0",
     "webpack-cli": "^4.7.2",
@@ -26,6 +34,8 @@
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
+    "@firebase/testing": "^0.20.11",
+    "@google-cloud/firestore": "^4.14.1",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.2.0",
     "eslint": "^7.32.0",
@@ -35,6 +45,7 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "mini-css-extract-plugin": "^2.2.0",
+    "mocha": "^9.0.3",
     "postcss-import": "^14.0.2",
     "postcss-loader": "^6.1.1",
     "style-loader": "^3.2.1"
