--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,12 @@
 {
     "env": {
         "browser": true,
-        "es2021": true
+        "es2021": true,
+        "node": true,
+        "mocha": true
     },
     "extends": [
+        "eslint:recommended",
         "plugin:react/recommended",
         "airbnb"
     ],
@@ -11,13 +14,12 @@
         "ecmaFeatures": {
             "jsx": true
         },
-        "ecmaVersion": 12,
+        "ecmaVersion": "latest",
         "sourceType": "module"
     },
     "plugins": [
         "react"
     ],
-    "ignorePatterns": ["dist/*.js"],
     "rules": {
         "max-len": ["error", {
             "ignoreStrings": true,
