--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./src/client/index.js",
   "scripts": {
     "start": "webpack serve --mode development",
-    "emulators": "firebase emulators:start --import mock-data --export-on-exit mock-data",
+    "emulators": "firebase emulators:start --import=mock-data --export-on-exit",
     "build": "webpack --mode production",
     "test": "mocha --exit"
   },
@@ -13,41 +13,42 @@
   "author": "@codebusters-ca",
   "license": "MIT",
   "dependencies": {
-    "@headlessui/react": "^1.4.0",
-    "@heroicons/react": "^1.0.3",
-    "autoprefixer": "^10.3.1",
-    "firebase": "^8.9.1",
-    "heroicons": "^1.0.2",
-    "html-webpack-plugin": "^5.3.2",
-    "postcss": "^8.3.6",
+    "@firebase/rules-unit-testing": "^2.0.1",
+    "@headlessui/react": "^1.4.3",
+    "@heroicons/react": "^1.0.5",
+    "autoprefixer": "^10.4.2",
+    "firebase": "^9.6.4",
+    "heroicons": "^1.0.5",
+    "html-webpack-plugin": "^5.5.0",
+    "postcss": "^8.4.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-firebase-hooks": "^3.0.4",
+    "react-firebase-hooks": "^5.0.0",
     "react-helmet": "^6.1.0",
-    "react-router-dom": "^5.2.0",
-    "tailwindcss": "^2.2.7",
-    "webpack": "^5.50.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "react-router-dom": "^6.2.1",
+    "tailwindcss": "^3.0.15",
+    "webpack": "^5.66.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/preset-env": "^7.15.0",
-    "@babel/preset-react": "^7.14.5",
+    "@babel/core": "^7.16.10",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
     "@firebase/testing": "^0.20.11",
-    "@google-cloud/firestore": "^4.14.1",
-    "babel-loader": "^8.2.2",
-    "css-loader": "^6.2.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "^2.24.0",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "mini-css-extract-plugin": "^2.2.0",
-    "mocha": "^9.0.3",
+    "@google-cloud/firestore": "^5.0.2",
+    "babel-loader": "^8.2.3",
+    "css-loader": "^6.5.1",
+    "eslint": "^8.7.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "mini-css-extract-plugin": "^2.5.2",
+    "mocha": "^9.1.4",
     "postcss-import": "^14.0.2",
-    "postcss-loader": "^6.1.1",
-    "style-loader": "^3.2.1"
+    "postcss-loader": "^6.2.1",
+    "style-loader": "^3.3.1"
   }
 }
