--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "webpack serve --mode development",
     "emulators": "firebase emulators:start --import=mock-data --export-on-exit",
     "build": "webpack --mode production",
-    "test": "mocha --exit"
+    "test": "mocha --exit",
+    "setup": "node scripts/setup.js"
   },
   "keywords": [],
   "author": "@codebusters-ca",
