--- a/firebase.json
+++ b/firebase.json
@@ -22,5 +22,8 @@
       "npm --prefix \"$RESOURCE_DIR\" run lint"
     ],
     "source": "functions"
+  },
+  "storage": {
+    "rules": "storage.rules"
   }
 }
