--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@heroicons/react": "^1.0.5",
     "autoprefixer": "^10.4.2",
     "firebase": "^9.6.4",
+    "force": "^0.0.3",
     "heroicons": "^1.0.5",
     "html-webpack-plugin": "^5.5.0",
     "postcss": "^8.4.5",
