--- a/package.json
+++ b/package.json
@@ -39,6 +39,11 @@
     "@babel/preset-react": "^7.16.7",
     "@firebase/testing": "^0.20.11",
     "@google-cloud/firestore": "^5.0.2",
+    "@types/node": "^20.10.2",
+    "@types/react": "^18.2.40",
+    "@types/react-dom": "^18.2.17",
+    "@types/react-helmet": "^6.1.9",
+    "@types/react-router-dom": "^5.3.3",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
     "dotenv": "^16.0.1",
@@ -52,6 +57,8 @@
     "mocha": "^9.1.4",
     "postcss-import": "^14.0.2",
     "postcss-loader": "^6.2.1",
-    "style-loader": "^3.3.1"
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.2"
   }
 }
