feat: bug fix, routing

--- a/package.json
+++ b/package.json
@@ -16,18 +16,20 @@
   "dependencies": {
     "@firebase/rules-unit-testing": "^2.0.1",
     "@headlessui/react": "^1.4.3",
-    "@heroicons/react": "^1.0.5",
+    "@heroicons/react": "^2.0.18",
     "autoprefixer": "^10.4.2",
+    "file-loader": "^6.2.0",
     "firebase": "^9.6.4",
     "force": "^0.0.3",
-    "heroicons": "^1.0.5",
+    "heroicons": "^2.0.18",
     "html-webpack-plugin": "^5.5.0",
     "postcss": "^8.4.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-firebase-hooks": "^5.0.0",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.2.1",
+    "sonner": "^1.2.4",
     "tailwindcss": "^3.0.15",
     "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1",
