--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "postcss": "^8.4.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-dropzone": "^14.2.3",
     "react-firebase-hooks": "^5.0.0",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.2.1",
